--- a/.github/workflows/action_branch.yml
+++ b/.github/workflows/action_branch.yml
@@ -3,13 +3,15 @@
 # -------------------------------------------------------------------------------------------------
 # Job Name
 # -------------------------------------------------------------------------------------------------
-name: build
+name: 🏠 Build
 
 
 # -------------------------------------------------------------------------------------------------
 # When to run
 # -------------------------------------------------------------------------------------------------
 on:
+  # Dispatch: allows for manual trigger via GH UI
+  workflow_dispatch:
   push:
     paths:
       - 'Makefile'
@@ -27,7 +29,7 @@ jobs:
   # (2/2) Build
   docker:
     needs: [params]
-    uses: devilbox/github-actions/.github/workflows/docker-name-version-flavour-arch.yml@master
+    uses: john-ea/devilbox-actions/.github/workflows/docker-name-version-flavour-arch.yml@master
     with:
       enabled: true
       can_deploy: ${{ github.ref == 'refs/heads/master' || startsWith(github.ref, 'refs/tags/') || startsWith(github.ref, 'refs/heads/release-') }}
