--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -19,5 +19,4 @@ on:
 # -------------------------------------------------------------------------------------------------
 jobs:
   lint:
-    #uses: devilbox/github-actions/.github/workflows/lint-generic.yml@master
-    uses: ./.github/workflows/lint-generic.yml
+    uses: john-ea/devilbox-actions/.github/workflows/lint-generic.yml@master
